<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/images" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/contact_name"
        android:textColor="#bdbdbd"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="90sp"
        android:layout_marginStart="90sp"
        android:layout_marginTop="15sp" />

    <TextView
        android:id="@+id/contact_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/contact_number"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="100sp"
        android:layout_marginStart="100sp"
        android:layout_marginTop="45sp" />

    <TextView
        android:id="@+id/contact_blood"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/blood_type"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="300sp"
        android:layout_marginStart="300sp"
        android:layout_marginTop="30sp"/>

</RelativeLayout>